<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/orangeDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz3Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orangeExtraLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MaterialBar" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="Quiz das bandeiras - 3 de 10" />
            </com.google.android.material.appbar.MaterialToolbar>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:padding="20dp"/>

            <ImageView
                android:layout_width="350dp"
                android:layout_height="238dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/canada" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <RadioButton
                    android:id="@+id/RBResposta1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:paddingHorizontal="10dp"
                    android:layout_marginHorizontal="10dp"                    android:textSize="20sp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_selector"
                    android:textColor="@drawable/radio_text_selector"
                    android:text="Romênia" />

                <RadioButton
                    android:id="@+id/RBResposta2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:layout_marginHorizontal="10dp"                    android:textSize="20sp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:textColor="@drawable/radio_text_selector"
                    android:text="Canadá" />

                <RadioButton
                    android:id="@+id/RBResposta3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="20sp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:textColor="@drawable/radio_text_selector"
                    android:text="Coréia do Norte" />

                <RadioButton
                    android:id="@+id/RBResposta4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="20sp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:textColor="@drawable/radio_text_selector"
                    android:text="Escócia" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_selector"
                android:padding="20dp"
                android:layout_margin="20dp"
                android:text="@string/button"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/created_by_me"
                android:gravity="center"
                android:layout_margin="20dp"
                android:textSize="18dp"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>