<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orangeDark"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orangeExtraLight">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MaterialBar" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/material_name" />

            </com.google.android.material.appbar.MaterialToolbar>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Quem é você?"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:padding="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="50dp"
                android:paddingVertical="20dp"
                style="@style/BackgroundUser">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center"
                    android:text="Selecione a sua imagem" />

                <ImageView
                    android:id="@+id/IVUsuario"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:src="@drawable/image_user" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="Nome: "
                        android:textSize="20sp"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/ETNome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Digite o seu nome"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        style="@style/EditText"
                        android:padding="10dp"
                        android:inputType="text"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingVertical="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ACPIniciar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_start"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:enabled="false"
                    android:padding="20dp"
                    android:background="@drawable/button_selector"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ACPFinalizar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_finish"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:padding="20dp"
                    style="@style/Button"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ButtonRanking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/Button"
                android:padding="20dp"
                android:layout_marginBottom="20dp"
                android:text="Ir para o Ranking"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                style="@style/BackgroundUser"
                android:padding="10dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/joao_vitor">

                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="João Vítor Moreira dos Santos Neris"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="2571392312001"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>